# opengl-study

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
